updating structure and names

--- a/SE02 - Algorithms and Data Structures.ipynb
+++ b/SE02 - Algorithms and Data Structures.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This portfolio was created by Philip Bizimis. The main sources for the content were the books *The Algorithm Design Manual* by Steven S. Skiena, *Grokking Algorithms: An Illustrated Guide for Programmers and Other Curious People* by Aditya Bhargava, the Khanacademy course on Algorithms and the internet (more detailed reference list at the end). <br>\n",
+    "This portfolio was created by Philip Bizimis. The main sources for the content were the books *The Algorithm Design Manual* by Steven S. Skiena, *Grokking Algorithms: An Illustrated Guide for Programmers and Other Curious People* by Aditya Bhargava, the Khanacademy course on Algorithms and the internet (more detailed sources list at the end). <br>\n",
     "\n",
     "This portfolio was created for the SE02 assessment but I try to build portfolios in a way that they serve me after the assessment as well. Thus, I tried to avoid long text paragraphs to give myself the chance to quickly find the notes I was looking for. <br>\n",
     "\n",
@@ -75,7 +75,7 @@
     "4. Investigating a Technology  \n",
     "\n",
     "\n",
-    "5. References"
+    "5. Sources"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "\"the running time grows at most this much, but it could grow more slowly\"\n",
     "- expresses the upper bound\n",
     "\n",
-    "<img style=\"width: 500px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/big0.png\">  \n",
+    "<img style=\"width: 300px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/big0.png\">  \n",
     "\n",
     "<p style=\"text-align: center;\"><a href=\"https://cdn.programiz.com/sites/tutorial2program/files/big0.png\">Source</a></p>\n",
     "\n",
@@ -189,7 +189,7 @@
     "\"the function grows asymptotically as fast as ,e.g., $n^2$\"\n",
     "- expresses the upper bound and lower bound (tight bound)\n",
     "\n",
-    "<img style=\"width: 500px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/theta.png\">\n",
+    "<img style=\"width: 300px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/theta.png\">\n",
     "<p style=\"text-align: center;\"><a href=\"https://cdn.programiz.com/sites/tutorial2program/files/theta.png\">Source</a></p>\n",
     "\n",
     "For a function $g(n)$, $\\Theta(g(n))$ is given by the relation:\n",
@@ -208,7 +208,7 @@
     "\"the running time grows at least this much\"\n",
     "- expresses the lower bound\n",
     "\n",
-    "<img style=\"width: 500px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/omega.png\">\n",
+    "<img style=\"width: 300px;\" src=\"https://cdn.programiz.com/sites/tutorial2program/files/omega.png\">\n",
     "<p style=\"text-align: center;\"><a href=\"https://cdn.programiz.com/sites/tutorial2program/files/omega.png\">Source</a></p>\n",
     "\n",
     "For a function $g(n)$, $\\Omega(g(n))$ is given by the relation:\n",
@@ -1641,7 +1641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ktwo', 'kthree', 'kfive', 'kone'}\n"
+      "{'ktwo', 'kone', 'kthree', 'kfive'}\n"
      ]
     }
    ],
@@ -2346,7 +2346,7 @@
     "#### Kd-Trees\n",
     "- a set $S$ of $n$ points or more complicated geometric objects in $k$ dimensions\n",
     "- solved problem: construct a tree that partitions space by half-planes such that each object is contained in its own box-shaped region\n",
-    "<img style=\"width: 500px;\" src=\"kd-tree.png\">\n",
+    "<img style=\"width: 500px;\" src=\"images/kd-tree.png\">\n",
     "<p style=\"text-align: center;\">The Algorithm Design Manual, page 389</p>  \n",
     "\n",
     "- this decomposing of space into smaller number of cells provides a fast way to access any object by position  \n",
@@ -2539,7 +2539,7 @@
     "    - traversing chaining: O(n+m)\n",
     "    - traversing open adressing: O(m)\n",
     "    - chaining with doubly-linked lists:\n",
-    "<img style=\"width: 500px;\"  src=\"page90.png\">\n",
+    "<img style=\"width: 500px;\"  src=\"images/page90.png\">\n",
     "<p style=\"text-align: center;\">The Algorithm Design Manual, page 90</p>  \n",
     "\n",
     "### 3.8 Graphs\n",
@@ -2583,7 +2583,7 @@
     "- explicit\n",
     "    - explicitly constructed\n",
     "\n",
-    "<img src=\"graphs.png\">\n",
+    "<img src=\"images/graphs.png\">\n",
     "<p style=\"text-align: center;\">The Algorithm Design Manual, page 147</p>  \n",
     "\n",
     "- two most commonly used representations of a graph\n",
@@ -2737,7 +2737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. References\n",
+    "## 5. Sources\n",
     "- Skiena, Steven S. 1998. The Algorithm Design Manual: Text. Vol. 1. Springer Science & Business Media\n",
     "- Bhargava, Aditya. 2016. Grokking Algorithms: An Illustrated Guide for Programmers and Other Curious People\n",
     "- https://www.khanacademy.org/computing/computer-science/algorithms\n",
